--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Saurav Saha\AppData\Local\Temp\testng-eclipse-765770701\testng-customsuite.xml</span>
+                    <span>C:\Users\Saurav Saha\AppData\Local\Temp\testng-eclipse--1888096353\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.datadriven.test.MercuryToursTest" hash-for-method="mercuryTourRegPageTest(Reshma, K, 13,new street, downtown, Sunnyvale, California, 94086.0, test2@gmail.com)">mercuryTourRegPageTest(Reshma, K, 13,new street, downtown, Sunnyvale, California, 94086.0, test2@gmail.com)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.datadriven.test.MercuryToursTest" hash-for-method="mercuryTourRegPageTest(Anirudh, D, 14,new street, downtown, Sunnyvale, California, 94087.0, test3@gmail.com)">mercuryTourRegPageTest(Anirudh, D, 14,new street, downtown, Sunnyvale, California, 94087.0, test3@gmail.com)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.datadriven.test.MercuryToursTest" hash-for-method="mercuryTourRegPageTest(Amreen, T, 15,new street, downtown, Sunnyvale, California, 94088.0, test4@gmail.com)">mercuryTourRegPageTest(Amreen, T, 15,new street, downtown, Sunnyvale, California, 94088.0, test4@gmail.com)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.datadriven.test.MercuryToursTest" hash-for-method="mercuryTourRegPageTest(Tom, Peter, 12,new street, downtown, Sunnyvale, California, 94085.0, test1@gmail.com)">mercuryTourRegPageTest(Tom, Peter, 12,new street, downtown, Sunnyvale, California, 94085.0, test1@gmail.com)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumSessions.ManojVasalaCalendar" hash-for-method="selectDate">selectDate</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,39 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.datadriven.test.MercuryToursTest</span>
+              <span class="class-name">SeleniumSessions.ManojVasalaCalendar</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="mercuryTourRegPageTest(Reshma, K, 13,new street, downtown, Sunnyvale, California, 94086.0, test2@gmail.com)">
-                  </a> <!-- mercuryTourRegPageTest(Reshma, K, 13,new street, downtown, Sunnyvale, California, 94086.0, test2@gmail.com) -->
-                  <span class="method-name">mercuryTourRegPageTest</span>
-                  <span class="parameters">(Reshma, K, 13,new street, downtown, Sunnyvale, California, 94086.0, test2@gmail.com)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="mercuryTourRegPageTest(Anirudh, D, 14,new street, downtown, Sunnyvale, California, 94087.0, test3@gmail.com)">
-                  </a> <!-- mercuryTourRegPageTest(Anirudh, D, 14,new street, downtown, Sunnyvale, California, 94087.0, test3@gmail.com) -->
-                  <span class="method-name">mercuryTourRegPageTest</span>
-                  <span class="parameters">(Anirudh, D, 14,new street, downtown, Sunnyvale, California, 94087.0, test3@gmail.com)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="mercuryTourRegPageTest(Amreen, T, 15,new street, downtown, Sunnyvale, California, 94088.0, test4@gmail.com)">
-                  </a> <!-- mercuryTourRegPageTest(Amreen, T, 15,new street, downtown, Sunnyvale, California, 94088.0, test4@gmail.com) -->
-                  <span class="method-name">mercuryTourRegPageTest</span>
-                  <span class="parameters">(Amreen, T, 15,new street, downtown, Sunnyvale, California, 94088.0, test4@gmail.com)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="mercuryTourRegPageTest(Tom, Peter, 12,new street, downtown, Sunnyvale, California, 94085.0, test1@gmail.com)">
-                  </a> <!-- mercuryTourRegPageTest(Tom, Peter, 12,new street, downtown, Sunnyvale, California, 94085.0, test1@gmail.com) -->
-                  <span class="method-name">mercuryTourRegPageTest</span>
-                  <span class="parameters">(Tom, Peter, 12,new street, downtown, Sunnyvale, California, 94085.0, test1@gmail.com)</span>
+                  <a name="selectDate">
+                  </a> <!-- selectDate -->
+                  <span class="method-name">selectDate</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Saurav Saha\AppData\Local\Temp\testng-eclipse-765770701\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Saurav Saha\AppData\Local\Temp\testng-eclipse--1888096353\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.datadriven.test.MercuryToursTest&quot;/&gt;
+      &lt;class name=&quot;SeleniumSessions.ManojVasalaCalendar&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -224,28 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'mercuryTourRegPageTest')
-data.setCell(0, 2, 'com.datadriven.test.MercuryToursTest')
-data.setCell(0, 3, 1771);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'mercuryTourRegPageTest')
-data.setCell(1, 2, 'com.datadriven.test.MercuryToursTest')
-data.setCell(1, 3, 1725);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'mercuryTourRegPageTest')
-data.setCell(2, 2, 'com.datadriven.test.MercuryToursTest')
-data.setCell(2, 3, 1685);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'mercuryTourRegPageTest')
-data.setCell(3, 2, 'com.datadriven.test.MercuryToursTest')
-data.setCell(3, 3, 1575);
+data.setCell(0, 1, 'selectDate')
+data.setCell(0, 2, 'SeleniumSessions.ManojVasalaCalendar')
+data.setCell(0, 3, 47269);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 47 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -271,55 +219,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.datadriven.test.MercuryToursTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
+              <div class="chronological-class-name">SeleniumSessions.ManojVasalaCalendar</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">selectDate</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">mercuryTourRegPageTest(Tom, Peter, 12,new street, downtown, Sunnyvale, California, 94085.0, test1@gmail.com)</span>
-                <span class="method-start">17873 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">19648 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">20669 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">mercuryTourRegPageTest(Reshma, K, 13,new street, downtown, Sunnyvale, California, 94086.0, test2@gmail.com)</span>
-                <span class="method-start">43020 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">44748 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">45744 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">mercuryTourRegPageTest(Anirudh, D, 14,new street, downtown, Sunnyvale, California, 94087.0, test3@gmail.com)</span>
-                <span class="method-start">75430 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">77006 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">77963 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">mercuryTourRegPageTest(Amreen, T, 15,new street, downtown, Sunnyvale, California, 94088.0, test4@gmail.com)</span>
-                <span class="method-start">115034 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">116720 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
