--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:55:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MercuryToursTest.mercuryTourRegPageTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">mercuryTourRegPageTest</td> 
-  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:55:39</td>   <td>25147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MercuryToursTest.mercuryTourRegPageTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">mercuryTourRegPageTest</td> 
-  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:56:11</td>   <td>57557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MercuryToursTest.mercuryTourRegPageTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">mercuryTourRegPageTest</td> 
-  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:56:51</td>   <td>97161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MercuryToursTest.mercuryTourRegPageTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">mercuryTourRegPageTest</td> 
-  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:54:56</td>   <td>-17871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MercuryToursTest.setUp()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:55:17</td>   <td>2796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MercuryToursTest.setUp()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:55:42</td>   <td>27872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MercuryToursTest.setUp()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:56:14</td>   <td>60090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MercuryToursTest.setUp()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:55:16</td>   <td>1775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MercuryToursTest.tearDown()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:55:41</td>   <td>26875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MercuryToursTest.tearDown()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:56:13</td>   <td>59133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MercuryToursTest.tearDown()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="b6cbcc">  <td>18/10/20 12:56:53</td>   <td>98848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MercuryToursTest.tearDown()[pri:0, instance:com.datadriven.test.MercuryToursTest@c46bcd4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b6cbcc">  <td>18/10/29 22:14:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManojVasalaCalendar.selectDate()[pri:0, instance:SeleniumSessions.ManojVasalaCalendar@7d70d1b1]">selectDate</td> 
+  <td>main@140799417</td>   <td></td> </tr>
 </table>
